--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -23,6 +23,9 @@
 @ui-pick-cross: #616D8C;
 @ui-pick-cross-down: #34436B;
 @ui-number-button-hover: #999999;
+@ui-close-cross-down: #949AB7;
+@ui-more-plus-hover: #707B99;
+@ui-more-plus-down: #AFB5C8;
 // Yellows
 @special-yellow-dark: #FFBD30;
 @special-yellow-faded: #F3C72B;
