--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -193,12 +193,43 @@
 }
 
 .filter-country--open .filter-country__button {
+  &::before,
+  &::after {
+    content: "";
+    top: 12px;
+    right: -2px;
+    width: 19px;
+    height: 2px;
+    background-color: @basic-blue-other;
+    border-radius: 20px;
+  }
+
   &::before {
-    display: none;
+    transform: rotate(45deg);
   }
 
   &::after {
+    content: "";
+    position: absolute;
     display: block;
+    transform: rotate(-45deg);
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before,
+    &::after {
+      top: 16px;
+      right: 0;
+      width: 27px;
+    }
+
+    &::before {
+      transform: rotate(42deg);
+    }
+
+    &::after {
+      transform: rotate(-42deg);
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -261,6 +292,7 @@
 
 .filter-country--open .filter-country__menu {
   display: block;
+  margin-bottom: 23px;
 }
 
 .filter-country--no-js .filter-country__menu {
@@ -302,7 +334,7 @@
 
 .filter-country__choice-container {
   margin-bottom: 28px;
-  padding: 0 25px;
+  padding: 1px 25px 0;
 
   @media (min-width: @tablet-width) {
     display: grid;
@@ -327,7 +359,7 @@
 .filter-country__first-letters {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  margin-bottom: 13px;
+  margin-bottom: 16px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
@@ -465,18 +497,7 @@
 
 .filter-country__close {
   width: 100%;
-
-  &::before {
-    content: "";
-    position: relative;
-    top: 1px;
-    left: -1px;
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    margin-right: 10px;
-    background-color: @red;
-  }
+  padding-left: 38px;
 
   @media (max-width: @mobile-width-only) {
     letter-spacing: 0.05em;
@@ -485,29 +506,66 @@
   @media (min-width: @tablet-width) {
     align-self: center;
     width: 93%;
-    padding: 33px 22px 38px;
+    padding: 42px 22px 38px 63px;
     .fontsize(20px);
-
-    &::before {
-      top: 5px;
-      left: -2px;
-      width: 24px;
-      height: 24px;
-      margin-right: 17px;
-    }
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
-    padding: 33px 42px 38px;
-
-    &::before {
-      left: -6px;
-      margin-right: 11px;
-    }
+    padding: 42px 42px 38px 77px;
   }
 }
 
 .filter-country--no-js .filter-country__close {
   display: none;
+}
+
+.filter-country__close-text {
+  position: relative;
+
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: -27px;
+    display: block;
+    width: 18px;
+    height: 2px;
+    background-color: @basic-blue-other;
+    border-radius: 20px;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  @media (min-width: @tablet-width) {
+    &::before,
+    &::after {
+      top: 6px;
+      left: -43px;
+      width: 26px;
+      height: 3px;
+    }
+
+    &::before {
+      transform: rotate(43deg);
+    }
+
+    &::after {
+      transform: rotate(-43deg);
+    }
+  }
+}
+
+.filter-country__close:active .filter-country__close-text {
+  &::before,
+  &::after {
+    background-color: @ui-close-cross-down;
+  }
 }
