Makes grid PP and adds avatar container height

--- a/source/less/blocks/traveler-card.less
+++ b/source/less/blocks/traveler-card.less
@@ -26,7 +26,7 @@
       "empty avatar gap tags tags transport"
       "emoty avatar gap button likes level"
       "countries countries countries countries countries countries";
-    grid-template-columns: 35px 190px 25px 150px 199px 85px;
+    grid-template-columns: 35px 190px 29px 150px 199px 85px;
     grid-template-rows: min-content minmax(85px, 100%) minmax(60px, 100%) min-content;
     width: 688px;
     padding: 35px 0 25px;
@@ -116,11 +116,12 @@
 
     @media (min-width: @tablet-width) {
       width: unset;
-      height: unset;
+      height: 190px;
       border-radius: 20px;
     }
 
     @media (min-width: @desktop-width) {
+      height: unset;
       padding: 0;
       border-radius: 20px 0 0 20px;
     }
