Styles icons and makes everythgin PP

--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -110,6 +110,7 @@
   @media (min-width: @tablet-width) {
     flex-direction: row;
     justify-content: center;
+    align-items: flex-start;
     margin-bottom: 81px;
   }
 
