--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -37,3 +37,10 @@
     .fontsize(20px);
   }
 }
+
+.copyright__logo {
+  @media (min-width: @tablet-width) {
+    position: relative;
+    top: 2px;
+  }
+}
