--- a/source/less/blocks/level-bar.less
+++ b/source/less/blocks/level-bar.less
@@ -1,1 +1,8 @@
-// Level-bar block
+.level-bar {
+  stroke: @special-orange;
+  stroke-width: 4px;
+
+  &--companion-card {
+    stroke-dasharray: 270px;
+  }
+}
