--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -47,30 +47,10 @@
   text-transform: uppercase;
   color: @basic-blue-light;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 45px;
-    height: 45px;
-    background-image: url("../../img/backgrounds/map_mark.svg");
-    background-position: 0 0;
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-
   @media (min-width: @tablet-width) {
     margin-bottom: 62px;
     padding-left: 94px;
     .fontsize(28px);
-
-    &::before {
-      top: -20px;
-      width: 68px;
-      height: 68px;
-    }
   }
 
   @media (min-width: @desktop-width) {
@@ -78,13 +58,26 @@
     margin-bottom: 0;
     padding-top: 0;
     padding-left: 270px;
+  }
+}
 
-    &::before {
-      top: -32px;
-      left: 149px;
-      width: 90px;
-      height: 90px;
-    }
+.address__marker {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+
+  @media (min-width: @tablet-width) {
+    top: -20px;
+    width: 68px;
+    height: 68px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -32px;
+    left: 149px;
+    width: 90px;
+    height: 90px;
   }
 }
 
