--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -59,6 +59,10 @@
   @media (min-width: @tablet-width) {
     padding: 31px 31px 17px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 35px;
+  }
 }
 
 .companion-card__name {
@@ -70,8 +74,10 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 24px;
+    padding-left: 37px;
     font-size: 24px;
     line-height: 22px;
+    text-align: left;
   }
 }
 
