--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -182,6 +182,7 @@
 }
 
 .country-card__counter {
+  position: relative;
   grid-area: count;
   margin: 0;
   padding: 28px 10px 10px 17px;
@@ -190,17 +191,30 @@
   color: fade(@basic-blue, 30%);
 
   @media (min-width: @tablet-width) {
-    top: unset;
-    right: unset;
-    bottom: 26px;
-    left: 30px;
     padding: 0;
     padding-left: 29px;
     .fontsize(20px);
   }
 
   @media (min-width: @desktop-width) {
-    bottom: 27px;
     padding-left: 31px;
+  }
+}
+
+.country-card__icon-user {
+  position: absolute;
+  top: 29px;
+  left: -2px;
+
+  @media (min-width: @tablet-width) {
+    top: -4px;
+    left: -3px;
+    width: 24px;
+    height: 25px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -3px;
+    left: -1px;
   }
 }
