--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -51,10 +51,14 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: -20px;
     text-align: left;
   }
 
   @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    padding-top: 4px;
+
     &:not(:last-child) {
       margin-right: 34px;
     }
