--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -5,6 +5,7 @@
   color: @special-grey;
   background-color: @white;
   border-radius: 10px;
+  overflow: hidden;
   filter: drop-shadow(0 0 0 fade(@black, 16%));
   transition: filter 0.4s ease;
 
