--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -75,13 +75,14 @@
   list-style: none;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 46px;
+    width: 616px;
+    margin: 0 auto 46px;
 
     &::before {
       content: "";
       position: absolute;
       top: -38px;
-      left: -33px;
+      left: -35px;
       display: block;
       width: 141px;
       height: 141px;
