--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -47,16 +47,13 @@
 }
 
 .navigation__item {
-  margin-bottom: -10px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: -20px;
     text-align: left;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 0;
     padding-top: 4px;
 
     &:not(:last-child) {
@@ -66,7 +63,7 @@
 }
 
 .navigation__link {
-  display: inline-block;
+  display: block;
   color: @basic-blue-other;
   overflow: hidden;
 
