--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -66,7 +66,7 @@
 
 .form__label {
   display: inline-block;
-  margin-bottom: 7px;
+  margin-bottom: 8px;
   padding-right: 45px;
   font-weight: 500;
   .fontsize(16px);
@@ -129,18 +129,44 @@
     &::before {
       content: "";
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 50%;
+      left: 50%;
       display: block;
-      width: 31px;
-      height: 31px;
-      background-color: @red;
+      width: 18px;
+      height: 20px;
+      transform: translate(-50%, -50%);
       opacity: 0.15;
+      background-repeat: no-repeat;
+      cursor: pointer;
 
       @media (min-width: @tablet-width) {
-        width: 43px;
-        height: 43px;
+        width: 23px;
+        height: 25px;
       }
+    }
+  }
+
+  &--plane {
+    &::before {
+      background-image: url("../../img/icons/icon_plane.svg");
+    }
+  }
+
+  &--car {
+    &::before {
+      background-image: url("../../img/icons/icon_bus.svg");
+    }
+  }
+
+  &--bicycle {
+    &::before {
+      background-image: url("../../img/icons/icon_bicycle.svg");
+    }
+  }
+
+  &--afoot {
+    &::before {
+      background-image: url("../../img/icons/icon_run.svg");
     }
   }
 
@@ -155,6 +181,7 @@
 
     @media (min-width: @tablet-width) {
       grid-row-gap: 24px;
+      margin-bottom: 40px;
     }
 
     @media (min-width: @desktop-width) {
@@ -162,6 +189,7 @@
       grid-template-columns: 221px 180px min-content;
       grid-row-gap: 0;
       align-items: center;
+      margin-bottom: 0;
     }
   }
 }
@@ -200,7 +228,7 @@
     padding: 17px 24px 22px;
 
     @media (min-width: @tablet-width) {
-      padding: 33px 37px 11px;
+      padding: 34px 39px 11px;
     }
   }
 }
@@ -275,20 +303,20 @@
 
 .form__checkbox-kids {
   position: relative;
-  top: 100px;
+  top: 106px;
   z-index: @z-index-checkbox-kids;
 
-  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+  @media (min-width: @tablet-width) {
     top: 0;
     padding-top: 14px;
 
     &:last-of-type {
-      margin-bottom: 18px;
+      margin-bottom: 21px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    top: 1px;
+    top: 10px;
     right: -4px;
     display: flex;
     align-items: center;
@@ -298,52 +326,80 @@
 }
 
 .form__checkbox-kids .form__checkbox {
-  position: relative;
+  position: absolute;
   top: 6px;
-  left: -3px;
-  width: 23px;
-  height: 23px;
-  margin-right: 7px;
+  left: 6px;
+  width: 5px;
+  height: 5px;
   outline: none;
 
   @media (min-width: @tablet-width) {
     top: 10px;
-    left: -3px;
-    width: 33px;
-    height: 33px;
-    margin-right: 15px;
-  }
-
-  @media (min-width: @desktop-width) {
-    top: -2px;
-    left: 0;
-    margin-right: 24px;
+    left: 10px;
   }
 }
 
-.form__checkbox-kids .form__label::before {
-  content: "";
-  position: absolute;
-  top: 7px;
-  left: 0;
+.form__checkbox-kids .form__label {
+  position: relative;
   display: block;
   box-sizing: border-box;
-  width: 26px;
-  height: 26px;
-  background-color: @white;
-  border: 1px solid @special-grey-border;
-  border-radius: 4px;
+  width: 100%;
+  padding-left: 39px;
+  padding-right: unset;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -8px;
+    left: 0;
+    display: block;
+    box-sizing: border-box;
+    width: 26px;
+    height: 26px;
+    background-color: @white;
+    border: 1px solid @special-grey-border;
+    border-radius: 4px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: 6px;
+    display: none;
+    width: 13px;
+    height: 12px;
+    background-image: url("../../img/icons/icon_check-mark.svg");
+    background-repeat: no-repeat;
+  }
 
   @media (min-width: @tablet-width) {
-    top: 26px;
-    left: 0;
-    width: 36px;
-    height: 36px;
+    padding-left: 58px;
+
+    &::before {
+      top: -9px;
+      left: 0;
+      width: 36px;
+      height: 36px;
+    }
+
+    &::after {
+      top: 1px;
+      left: 9px;
+      width: 18px;
+      height: 17px;
+    }
   }
 
   @media (min-width: @desktop-width) {
-    top: -1px;
-    left: 2px;
+    &::before {
+      top: -9px;
+      left: -1px;
+    }
+
+    &::after {
+      left: 8px;
+    }
   }
 }
 
@@ -352,7 +408,7 @@
 }
 
 .form__checkbox-kids:hover .form__label::before,
-.form__checkbox-kids:focus .form__label::before {
+.form__checkbox-kids:focus-within .form__label::before {
   border-color: @special-border-blue-fade;
 }
 
@@ -366,14 +422,18 @@
   border-color: @special-bluegrey;
 }
 
+.form__checkbox:checked + .form__label::after {
+  display: block;
+}
+
 .form__input-days {
   position: relative;
   top: -25px;
-  margin-bottom: 44px;
+  margin-bottom: 45px;
 
   @media (min-width: @tablet-width) {
     position: static;
-    margin-bottom: 59px;
+    margin-bottom: 80px;
   }
 
   @media (min-width: @desktop-width) {
