--- a/source/less/blocks/number-input.less
+++ b/source/less/blocks/number-input.less
@@ -111,7 +111,7 @@
   grid-area: number;
   box-sizing: border-box;
   width: 100%;
-  padding: 15px 16px 11px 31px;
+  padding: 15px 16px 11px;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -121,14 +121,15 @@
   border: 1px solid @special-grey-border;
   border-right: 0;
   border-left: 0;
+  appearance: textfield;
 
   @media (min-width: @tablet-width) {
-    padding: 24px 23px 22px 31px;
+    padding: 24px 23px 22px 16px;
     .fontsize(20px);
   }
 
   @media (min-width: @desktop-width) {
-    padding: 24px 10px 22px 22px;
+    padding: 23px 25px 22px 21px;
     line-height: 18px;
   }
 }
@@ -140,4 +141,10 @@
 
 .number-input:active .number-input__input {
   border-color: @basic-blue;
+}
+
+.number-input__input::-webkit-inner-spin-button,
+.number-input__input::-webkit-outer-spin-button {
+  appearance: none;
+  margin: 0;
 }
