--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -64,6 +64,7 @@
     &::after {
       top: 40px;
       left: 43px;
+      width: 50px;
     }
   }
 }
@@ -86,7 +87,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 36px 36px 37px 95px;
+    padding: 37px 36px 37px 95px;
     border: 0;
   }
 }
