Adds grey and shadow colors

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -43,6 +43,7 @@
 @special-blue-darkest: #141B3B;
 @special-shadow: rgba(29, 46, 91, 0.14);
 @special-shadow-darker: rgba(54, 80, 148, 0.18);
+@special-shadow-light: rgba(22, 28, 53, 0.17);
 @special-blue-light: #DFE3F0;
 @special-steelblue: #D1D7E9;
 @special-steelblue-dark: #D4D9EB;
@@ -58,6 +59,8 @@
 @special-grey-border-other: #D6D9E6;
 @special-grey-border-dark: #E1E3E9;
 @special-grey-ui: #CCCCCC;
+@special-grey-icons: #D9D9D9;
+@special-grey-icons-hover: #B2B2B2;
 // Assorted
 @special-pink: #F9EAEA;
 @special-pink-saturated: #F9D8D8;
