Fixes sliding edit button

--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -171,14 +171,15 @@
 
   @media (min-width: @tablet-width) {
     grid-area: edit;
-    padding: 20px 10px 14px 30px;
+    margin-right: 29px;
+    padding: 20px 10px 14px;
     .fontsize(20px);
     letter-spacing: 0.1em;
-    text-align: center;
+    text-align: right;
   }
 
   @media (min-width: @desktop-width) {
+    margin-right: unset;
     padding: 40px 39px 37px;
-    text-align: right;
   }
 }
