Adds z-index for checkbox and red for heart icon

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -33,6 +33,7 @@
 @special-red: #F47E7E;
 @special-red-darker: #F97676;
 @special-red-saturated: #FF5C23;
+@special-red-icon: #F02323;
 // Oranges
 @special-orange: #FF8D30;
 @special-orange-light: #FFA530;
@@ -106,6 +107,7 @@
 @z-index-calendar-day-hover: 2;
 @z-index-steps-tracker: 3;
 @z-index-country-choice-container: 4;
+@z-index-checkbox-icon: 2;
 @z-index-checkbox-kids: 2;
 // Catalog page
 @z-index-filter-country: 3;
