Styles svgs from the sprite and makes everything crossbrowser

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -194,6 +194,8 @@
     .fontsize(17px);
     color: @basic-blue;
     background-color: @white;
+    filter: drop-shadow(0 0 0 fade(@black, 16%));
+    transition: filter 0.4s ease;
 
     &:hover,
     &:focus {
