--- a/source/less/blocks/filter-catalog.less
+++ b/source/less/blocks/filter-catalog.less
@@ -62,7 +62,7 @@
     &:last-of-type {
       position: relative;
       top: -12px;
-      margin-bottom: 26px;
+      margin-bottom: 24px;
       border-bottom: 1px solid @special-yellow-faded;
     }
   }
@@ -179,7 +179,7 @@
 // Filter options containers
 .filter-catalog__options {
   position: relative;
-  top: 12px;
+  top: 13px;
   display: none;
   margin: 0;
   padding: 0;
@@ -243,31 +243,26 @@
 
 // Checkboxes
 .filter-catalog__checkbox {
-  margin-right: 10px;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 2px;
+  height: 2px;
   opacity: 0;
-
-  @media (min-width: @tablet-width) {
-    margin-right: 13px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-right: 18px;
-  }
 }
 
 .filter-catalog__transport-label {
   position: relative;
-  left: -25px;
-  margin-right: -25px;
+  margin-right: -9px;
 
   @media (min-width: @tablet-width) {
-    left: -26px;
     margin-right: -26px;
   }
 }
 
 .filter-catalog__label {
   position: relative;
+  padding-left: 28px;
   font-weight: 400;
   font-size: 15px;
   line-height: 20px;
@@ -278,7 +273,7 @@
     content: "";
     position: absolute;
     top: -4px;
-    left: -27px;
+    left: 1px;
     display: block;
     width: 18px;
     height: 18px;
@@ -286,32 +281,73 @@
     border-radius: 4px;
   }
 
+  &::after {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: 3px;
+    display: none;
+    width: 13px;
+    height: 12px;
+    background-image: url("../../img/icons/icon_check-mark.svg");
+    background-repeat: no-repeat;
+  }
+
   @media (min-width: @tablet-width) {
+    padding-left: 32px;
     .fontsize(20px);
 
     &::before {
-      left: -36px;
+      left: -4px;
       width: 24px;
       height: 24px;
+    }
+
+    &::after {
+      left: -1px;
+      width: 18px;
+      height: 17px;
     }
   }
 
   @media (min-width: @desktop-width) {
+    padding-left: 37px;
+
     &::before {
-      left: -37px;
+      top: -5px;
+      left: 0;
+    }
+
+    &::after {
+      top: -2px;
+      left: 3px;
     }
   }
 }
 
-.filter-catalog__checkbox:focus + .filter-catalog__label {
+.filter-catalog__option:focus-within .filter-catalog__label {
+  opacity: 0.6;
+}
+
+.filter-catalog__checkbox:active ~ .filter-catalog__label {
+  opacity: 0.3;
+}
+
+.filter-catalog__checkbox:focus ~ .filter-catalog__label {
   outline: -webkit-focus-ring-color auto 1px;
+}
+
+.filter-catalog__checkbox:checked + .filter-catalog__label {
+  &::after {
+    display: block;
+  }
 }
 
 // Transport filter
 .filter-catalog__transport-list {
   position: relative;
   top: 16px;
-  left: 9px;
+  left: 2px;
   display: none;
   justify-content: flex-start;
   margin: 0;
@@ -319,15 +355,15 @@
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
     top: -30px;
-    left: -2px;
+    left: -9px;
     margin-bottom: -18px;
   }
 
   @media (min-width: @desktop-width) {
     top: 15px;
-    left: 7px;
+    left: 0;
     margin-top: 3px;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
   }
 }
 
@@ -336,10 +372,34 @@
 }
 
 .filter-catalog__transport-item {
-  margin-right: 9px;
+  position: relative;
+  width: 31px;
+  height: 31px;
+  margin-right: 2px;
+  margin-bottom: 2px;
+  filter: drop-shadow(0 0 0 @special-shadow-light);
+  transition: filter 0.4s ease;
+
+  &:hover {
+    filter: drop-shadow(0 2px 6px @special-shadow-light);
+  }
+
+  &:focus-within {
+    filter: drop-shadow(0 2px 6px @special-shadow-light);
+    outline: -webkit-focus-ring-color auto 1px;
+  }
+
+  &:active {
+    filter: none;
+  }
 
   &:last-of-type {
     margin-right: 0;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 43px;
+    height: 43px;
   }
 }
 
@@ -368,7 +428,7 @@
 .filter-catalog__fieldset--open .filter-catalog__level-filter {
   display: block;
 
-  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+  @media (min-width: @tablet-width) {
     display: grid;
   }
 }
@@ -455,6 +515,7 @@
   text-align: center;
   color: @basic-blue-light;
   border: 1px solid @special-grey-border;
+  appearance: textfield;
 
   &:hover,
   &:focus {
@@ -471,23 +532,13 @@
   }
 
   &--left {
-    padding-left: 32px;
     border-radius: 4px 0 0 4px;
-
-    @media (min-width: @tablet-width) {
-      padding-left: 17px;
-    }
   }
 
   &--right {
     position: relative;
     left: -1px;
-    padding-left: 30px;
     border-radius: 0 4px 4px 0;
-
-    @media (min-width: @tablet-width) {
-      padding-left: 15px;
-    }
   }
 }
 
@@ -502,16 +553,16 @@
 
 .filter-catalog__number-input::-webkit-inner-spin-button,
 .filter-catalog__number-input::-webkit-outer-spin-button {
-  @media (min-width: @tablet-width) {
-    appearance: none;
-    margin: 0;
-  }
+  appearance: none;
+  margin: 0;
 }
 
 .filter-catalog__level-range {
   width: 95%;
 
   @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+    position: relative;
+    top: -3px;
     grid-area: range;
     width: 96%;
   }
