--- a/source/less/blocks/level-bar.less
+++ b/source/less/blocks/level-bar.less
@@ -1,8 +1,9 @@
 .level-bar {
   stroke: @special-orange;
   stroke-width: 4px;
+  stroke-dasharray: 270px;
 
-  &--companion-card {
-    stroke-dasharray: 270px;
+  &--user-profile {
+    stroke-width: 2px;
   }
 }
