--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -181,7 +181,8 @@
       display: block;
       width: 32px;
       height: 16px;
-      background-color: @red;
+      background-image: url("../../img/icons/icon_arrow-bend.svg");
+      background-repeat: no-repeat;
     }
   }
 }
