--- a/source/less/blocks/companion-card.less
+++ b/source/less/blocks/companion-card.less
@@ -8,6 +8,7 @@
   overflow: hidden;
   filter: drop-shadow(0 0 0 fade(@black, 16%));
   transition: filter 0.4s ease;
+  will-change: filter;
 
   &:hover,
   &:focus-within {
