--- a/source/less/blocks/filter-country.less
+++ b/source/less/blocks/filter-country.less
@@ -62,9 +62,10 @@
     top: 3px;
     left: 0;
     display: block;
-    width: 15px;
+    width: 16px;
     height: 10px;
-    background-color: @red;
+    background-image: url("../../img/icons/icon_filter.svg");
+    background-repeat: no-repeat;
   }
 
   @media (min-width: @tablet-width) {
@@ -77,7 +78,7 @@
     padding: 0 30px 0 65px;
 
     &::before {
-      top: -1px;
+      top: 0;
       left: 20px;
       width: 23px;
       height: 16px;
