--- a/source/less/blocks/range-slider.less
+++ b/source/less/blocks/range-slider.less
@@ -3,13 +3,17 @@
   width: 100%;
   height: 2px;
   background-color: fade(@basic-blue-light, 20%);
+
+  @media (min-width: @tablet-width) and (max-width: @tablet-width-only) {
+    height: 3px;
+  }
 }
 
 .range-slider__progress {
   position: absolute;
   left: 33%;
   width: 67%;
-  height: 2px;
+  height: 100%;
   background-color: @basic-blue-light;
 }
 
@@ -33,8 +37,12 @@
   }
 
   @media (min-width: @tablet-width) {
-    top: -6px;
+    top: -5px;
     .circle(13px);
+  }
+
+  @media (min-width: @desktop-width) {
+    top: -6px;
   }
 
   &--min {
