Add z-index for transform bug-fix for Safari

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -84,6 +84,8 @@
 @z-index-tooltip: 3;
 @z-index-page-footer: 3;
 @z-index-pseudo-hover: 2;
+@z-index-tranform-fix: 1;
+@z-index-transform-fix-ontop: 2;
 // Menu
 @z-index-top-bar-logo: 6;
 @z-index-menu: 5;
